# ml-projects

./: .gitignore  CLAUDE.md  LICENSE  main.py  pyproject.toml
mnist/: data.py  leaderboard.py  main.py  pytorch_model.py  sklearn_model.py  tensorflow_model.py
tests/: test_mnist_data.py  test_titanic_data.py
titanic/: data.py  leaderboard.py  main.py  pytorch_model.py  sklearn_model.py  tensorflow_model.py
