[project]
name = "ml-projects"
version = "0.1.0"
description = "ML experiments — Titanic and beyond"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "seaborn",
    "scikit-learn",
    "tensorflow==2.12.0",  # last version with Intel Mac wheels
    "torch==2.2.2",  # last version with Intel Mac wheels
    "tabulate",
]
