[project]
name = "ml-projects"
version = "0.1.0"
description = "ML experiments — Titanic and beyond"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.22",
    "pandas>=2.0",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
    "tensorflow==2.12.0",  # last version with Intel Mac wheels
    "torch==2.2.2",  # last version with Intel Mac wheels
    "tabulate>=0.9",
    "joblib>=1.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::sklearn.exceptions.ConvergenceWarning",
    "ignore::UserWarning",
]
